--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
-    "axios": "^0.21.1"
+    "axios": "^0.21.1",
+    "normalize.css": "^8.0.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.12.13",
