--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@babel/cli": "^7.12.13",
     "@babel/core": "^7.12.13",
     "@babel/node": "^7.12.13",
+    "@babel/plugin-transform-arrow-functions": "^7.13.0",
     "@babel/preset-env": "^7.12.13",
     "css-loader": "^5.0.1",
     "file-loader": "^6.2.0",
