--- a/React/heima/app1/package.json
+++ b/React/heima/app1/package.json
@@ -6,6 +6,8 @@
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
+    "mobx": "^6.3.2",
+    "mobx-react": "^7.2.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
