--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "css-loader": "^5.0.1",
     "file-loader": "^6.2.0",
     "style-loader": "^2.0.0",
+    "typescript-plugin-css-modules": "^3.2.0",
     "url-loader": "^4.1.1",
     "vue-loader": "^15.9.6",
     "vue-template-compiler": "^2.6.12"
