--- a/vue/vue-project/vue-admin/tsconfig.json
+++ b/vue/vue-project/vue-admin/tsconfig.json
@@ -11,6 +11,7 @@
     "allowSyntheticDefaultImports": true,
     "sourceMap": true,
     "baseUrl": ".",
+    "noImplicitAny": true, // 不需要显式声明 any
     "types": [
       "webpack-env"
     ],
