--- a/vue/vue-project/vue-app/package.json
+++ b/vue/vue-project/vue-app/package.json
@@ -32,6 +32,7 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^6.2.2",
+    "json-loader": "^0.5.7",
     "less": "^3.0.4",
     "less-loader": "^5.0.0",
     "vue-template-compiler": "^2.6.11"
