--- a/node/express-demo/.env
+++ b/node/express-demo/.env
@@ -1,1 +1,4 @@
 TEXT_STYLE=UPPERCASE
+MONGO_URI='mongodb+srv://user1:AOaBF6b268HLYq2R@cluster0.3deru.mongodb.net/myFirstDatabase?retryWrites=true&w=majority'
+USER_PASS=TzKWZIo5IuEXUdRT
+USER1_PASS=AOaBF6b268HLYq2R
