--- a/node/express-demo/package.json
+++ b/node/express-demo/package.json
@@ -9,11 +9,7 @@
   "dependencies": {
     "body-parser": "^1.19.1",
     "dotenv": "^10.0.0",
-    "express": "^4.17.2",
-    "mongodb": "^4.3.0",
-    "mongoose": "^6.1.5"
+    "express": "^4.17.2"
   },
-  "devDependencies": {
-    "nodemon": "^2.0.15"
-  }
+  "devDependencies": {}
 }
